<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/characterNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/specieTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/specie_text_header"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/specieText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="4dp"
            android:paddingEnd="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genderTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/gender_text_header"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/genderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="4dp"
            android:paddingEnd="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/originTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/origin_text_header"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/originText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="4dp"
            android:paddingEnd="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/location_text_header"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="4dp"
            android:paddingEnd="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/episodesTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:text="@string/episodes_text_header"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/episodesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="4dp"
            android:paddingEnd="15dp"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
